--- a/public/bootstrap/extend/bootstrap-toggle-buttons/static/stylesheets/bootstrap-toggle-buttons.css
+++ b/public/bootstrap/extend/bootstrap-toggle-buttons/static/stylesheets/bootstrap-toggle-buttons.css
@@ -155,7 +155,7 @@
 }
 
 .accordion a.accordion-toggle.collapsed:before{
-  content: "►";
+  content: "►" !important;
 }
 .accordion a.accordion-toggle[data-toggle=collapse]:before{
   content: "▼";
