--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1570,8 +1570,8 @@ ul.icons li {
 	padding: 15px;
 }
 .widget .widget-body .count {
-	font-size: 15pt;
-	font-weight: 600;
+	/*font-size: 15pt;*/
+	/*font-weight: 600;*/
 }
 .widget .widget-body.list {
 	color: #575655;
@@ -1583,12 +1583,14 @@ ul.icons li {
 }
 .widget .widget-body.list ul li {
 	padding: 0 10px;
-	height: 39px;
+	height: 30px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.02);
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	line-height: 39px;
+	line-height: 30px;
 	text-align: left;
 	clear: both;
+	font-size: 13pt !important;
+	font-weight: 600;
 }
 .widget .widget-body.list ul li:first-child {
 	border-top: none;
@@ -3340,14 +3342,19 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	-webkit-border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	border-radius: 5px 5px 5px 5px;
-	padding: 10px 15px 15px 65px;
+	margin-top: 1.1%;
+	padding: 5px 5px 5px 50px;
 	color: #9e9e9e;
 	text-shadow: 0 1px 0 #fff;
 }
+.pages ul li > i:first-child{
+	position: absolute;
+}
 .pages ul li > i:before {
 	font-size: 40px;
-	left: 12px;
-	top: 16px;
+	left: -40px;
+	top: 7px;
+	position: absolute;
 	color: #9e9e9e;
 }
 .pages ul li.span3:nth-child(4n+5) {
@@ -3357,6 +3364,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	font-size: 11pt;
 	padding: 3px 0 5px;
 	display: block;
+	text-align: center;
 }
 .pages ul li .actions {
 	display: block;
@@ -3377,6 +3385,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .pages ul li .actions .fa.edit i:before {
 	top: 1px;
 }
+.pages ul li.clear{
+	visibility: hidden;
+}
 .pages ul li:hover,
 .pages ul li.primary {
 	background-color: #da4c4c;
@@ -3394,7 +3405,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 }
 .pages ul li:hover i:before,
 .pages ul li.primary i:before {
-	color: #f4cbcb;
+	color: #fff;
 }
 /* Calendar */
 #external-events ul {
