--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1097,7 +1097,7 @@ li.center,
 	right: 0;
 	width: 100%;
 	height: 70px;
-	/*border-bottom: 1px solid #010101;*/
+	border-bottom: 1px solid #010101;
 
 }
 .top-menu .col.main-left.login {
@@ -1918,7 +1918,7 @@ ul.icons li {
 	height: auto;
 	display: block;
 	padding: 0 15px;
-	color: #fff;
+	/*color: #fff;*/
 	/*border-left: 1px solid #f5f5f5;*/
 }
 .widget.widget-tabs .widget-head ul li a  h4{
